{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 2203,
  "lineage": "7fe3d908-7b39-b150-18eb-1bcbadeda3ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-alb/abd8fc5f719c700f",
            "arn_suffix": "app/what-backend-release-alb/abd8fc5f719c700f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "what-backend-release-alb-1252740199.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-alb/abd8fc5f719c700f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "what-backend-release-alb",
            "security_groups": [
              "sg-06a7142f72c4787fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0911abce1050d1e25"
              },
              {
                "subnet_id": "subnet-0b382db18bdff1d2a"
              }
            ],
            "subnets": [
              "subnet-0911abce1050d1e25",
              "subnet-0b382db18bdff1d2a"
            ],
            "tags": {
              "Environment": "release",
              "Name": "what-backend-alb"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-alb"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-panel-alb/d4f00f463c1e8b5c",
            "arn_suffix": "app/what-backend-release-panel-alb/d4f00f463c1e8b5c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "what-backend-release-panel-alb-10083858.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-panel-alb/d4f00f463c1e8b5c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "what-backend-release-panel-alb",
            "security_groups": [
              "sg-06a7142f72c4787fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0911abce1050d1e25"
              },
              {
                "subnet_id": "subnet-0b382db18bdff1d2a"
              }
            ],
            "subnets": [
              "subnet-0911abce1050d1e25",
              "subnet-0b382db18bdff1d2a"
            ],
            "tags": {
              "Environment": "release",
              "Name": "what-backend-panel-alb"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-panel-alb"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_server_js1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b308c240ae70bb6",
            "arn": "arn:aws:ec2:eu-central-1:934086672967:instance/i-0435131e89e747bb8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0435131e89e747bb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028e0ff3855a0340d",
            "private_dns": "ip-10-10-50-226.eu-central-1.compute.internal",
            "private_ip": "10.10.50.226",
            "public_dns": "ec2-18-185-56-11.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.185.56.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077bc22924f780763",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2841529078d3621",
            "tags": {
              "Name": "Jenkins_Node_01"
            },
            "tags_all": {
              "Name": "Jenkins_Node_01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716849e65d668107"
            ]
          },
          "dependencies": [
            "aws_security_group.web_traffic",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.aws-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b308c240ae70bb6",
            "arn": "arn:aws:ec2:eu-central-1:934086672967:instance/i-0dcd712aee2eda897",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcd712aee2eda897",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abf0a32855d84c07",
            "private_dns": "ip-10-10-50-196.eu-central-1.compute.internal",
            "private_ip": "10.10.50.196",
            "public_dns": "ec2-18-195-39-212.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.39.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0056b5a139142cac6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2841529078d3621",
            "tags": {
              "Name": "Jenkins_Main"
            },
            "tags_all": {
              "Name": "Jenkins_Main"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716849e65d668107"
            ]
          },
          "dependencies": [
            "aws_instance.dev_server_js1",
            "aws_security_group.web_traffic",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.aws-vpc",
            "data.aws_ami.ubuntu",
            "data.template_file.jenkins_casc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:internet-gateway/igw-05a8eb22d595aeb27",
            "id": "igw-05a8eb22d595aeb27",
            "owner_id": "934086672967",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-igw"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-igw"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:listener/app/what-backend-release-alb/abd8fc5f719c700f/76f98fbd14ec34cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-tg/e5c379d7782863af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:listener/app/what-backend-release-alb/abd8fc5f719c700f/76f98fbd14ec34cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-alb/abd8fc5f719c700f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:listener/app/what-backend-release-panel-alb/d4f00f463c1e8b5c/31e7aa46c425d2e7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-panel-tg/7853fe2eac59a243",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:listener/app/what-backend-release-panel-alb/d4f00f463c1e8b5c/31e7aa46c425d2e7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:loadbalancer/app/what-backend-release-panel-alb/d4f00f463c1e8b5c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer_panel",
            "aws_lb_target_group.target_group_panel",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-tg/e5c379d7782863af",
            "arn_suffix": "targetgroup/what-backend-release-tg/e5c379d7782863af",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 300,
                "matcher": "200",
                "path": "/api/v1/accounts",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-tg/e5c379d7782863af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "what-backend-release-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "release",
              "Name": "what-backend-lb-tg"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-panel-tg/7853fe2eac59a243",
            "arn_suffix": "targetgroup/what-backend-release-panel-tg/7853fe2eac59a243",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:934086672967:targetgroup/what-backend-release-panel-tg/7853fe2eac59a243",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "what-backend-release-panel-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "release",
              "Name": "what-backend-panel-lb-tg"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-panel-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a8eb22d595aeb27",
            "id": "r-rtb-0390bc813daa5ff161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0390bc813daa5ff16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:route-table/rtb-0390bc813daa5ff16",
            "id": "rtb-0390bc813daa5ff16",
            "owner_id": "934086672967",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a8eb22d595aeb27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "release",
              "Name": "what-backend-routing-table-public"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9dd412d68be3cda",
            "route_table_id": "rtb-0390bc813daa5ff16",
            "subnet_id": "subnet-0c2841529078d3621"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9dd412d68be3cda",
            "route_table_id": "rtb-0390bc813daa5ff16",
            "subnet_id": "subnet-0c2841529078d3621"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057218bd0d7245b7c",
            "route_table_id": "rtb-0390bc813daa5ff16",
            "subnet_id": "subnet-0b382db18bdff1d2a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05622c9893bdc6602",
            "route_table_id": "rtb-0390bc813daa5ff16",
            "subnet_id": "subnet-0911abce1050d1e25"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:security-group/sg-06a7142f72c4787fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a7142f72c4787fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220216125533530800000004",
            "name_prefix": "terraform-",
            "owner_id": "934086672967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "release",
              "Name": "what-backend-sg"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:security-group/sg-00424a0e946918958",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00424a0e946918958",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220216125533522700000003",
            "name_prefix": "terraform-",
            "owner_id": "934086672967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "release",
              "Name": "what-backend-sg"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:security-group/sg-001580271e15cdf82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001580271e15cdf82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06a7142f72c4787fc"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220216125537489500000005",
            "name_prefix": "terraform-",
            "owner_id": "934086672967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "release",
              "Name": "what-backend-service-sg"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:security-group/sg-0716849e65d668107",
            "description": "inbound ports for ssh and standard http and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0716849e65d668107",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "Allow web traffic",
            "name_prefix": "",
            "owner_id": "934086672967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:subnet/subnet-0c2841529078d3621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2841529078d3621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934086672967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-jenkins-subnet-1"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-jenkins-subnet-1"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:subnet/subnet-02321646a3d866f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02321646a3d866f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934086672967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-private-subnet-1"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-private-subnet-1"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:subnet/subnet-0b1337dacbf0db3d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1337dacbf0db3d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934086672967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-private-subnet-2"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-private-subnet-2"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:subnet/subnet-0b382db18bdff1d2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b382db18bdff1d2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934086672967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-public-subnet-1"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-public-subnet-1"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:subnet/subnet-0911abce1050d1e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911abce1050d1e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934086672967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-public-subnet-2"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-public-subnet-2"
            },
            "vpc_id": "vpc-016d7d38c79f3ed07"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:934086672967:vpc/vpc-016d7d38c79f3ed07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04e7a7a914d2f7b75",
            "default_route_table_id": "rtb-0329ec76836636b24",
            "default_security_group_id": "sg-0c35922ad42816db0",
            "dhcp_options_id": "dopt-08d8c28e770c82197",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016d7d38c79f3ed07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0329ec76836636b24",
            "owner_id": "934086672967",
            "tags": {
              "Environment": "release",
              "Name": "what-backend-vpc"
            },
            "tags_all": {
              "Environment": "release",
              "Name": "what-backend-vpc"
            }
          }
        }
      ]
    }
  ]
}